# oil_painting_research_assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
benchmarks/: benchmark_gold_set_v1.json  benchmark_template.json
docs/: PORTFOLIO_ENTRY.md
docs/foundation/: FOUNDATION_PACK_v1.md  benchmark_template.md  chunking_rules.md  controlled_vocabulary.md  metadata_schema.md  source_hierarchy.md  system_prompt_v1.md
docs/plans/: 2026-03-09-chromadb-specialist-skill-design.md  2026-03-09-senior-python-engineer-skill-design.md  2026-03-09-technical-writer-skill-design.md
docs/policies/: answer_labeling_standard.md  conflict_resolution_policy.md  deduplication_policy.md  file_naming_policy.md  file_naming_policy_v1  metadata_provenance_rules.md  retrieval_policy_v1.md  review_workflow.md  source_acquisition_policy.md
docs/roadmap/: CHANGELOG.md
prompts/docs/: Prompt - Create Documentation Docs - Add-on prompt.md  Prompt - Create Documentation Docs - Staged Version.md  (+1 more)
schemas/: answer_label_schema.json  approval_state_schema.json  benchmark_template.json  chunk_schema.json  conflict_record_schema.json  context_package_schema.json  duplicate_cluster_schema.json  field_provenance_schema.json  restriction_flags.json  retrieval_trace_schema.json  review_record_schema.json  source_register_schema.json
scripts/: intake.py
tests/: test_chunking.py  test_intake.py  test_models.py  test_pdf_metadata.py  test_retrieval.py  test_utils.py
vocab/: controlled_vocabulary.json  material_alias_map.json  material_ontology_v1.json  product_alias_map.json
(+75 files in other folders)
