[project]
name = "oil-painting-research-assistant"
version = "0.1.0"
description = "Provenance-aware RAG system for oil painting research"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
